package ADTs;

public interface IRect {


    IVector2 max();

    Rect prod(float factor);

}
