package ADTs;
public interface IRowCol {
    int getCol();
    int getRow();
}
