package ADTs;
public interface ITuple<T1, T2> {

    T2 get2();
    T1 get1();
}
