package ADTs;

public interface IVector3 {
    IVector2 xy();

    float z();
}
