package ADTs;

public class Tuple<T1, T2> implements ITuple<T1, T2> {
    private T1 element1;
    private T2 element2;

    public static<TypeA,TypeB> Tuple<TypeA,TypeB>
    get(TypeA c1, TypeB c2)
    {
        return new Tuple<TypeA, TypeB>(c1,c2);
    }


    public Tuple(T1 element1, T2 element2) {
        this.element1 = element1;
        this.element2 = element2;
    }

    @Override
    public T2 get2() {
        return element2;
    }

    @Override
    public T1 get1() {
        return element1;
    }
}
